Batch reload-world league relation synchronization